---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2024-10-26
  Changes:
    - Dropped support for game version 1.1.
    - Deconstruction planners from library are now fully supported for deconstructing unapproved ghosts.
    - Default control for construction planner has been changed to SHIFT + C to avoid collision with vanilla copper wire connection mode one.
    - Auto-approval is now by default enabled in the player settings. Previously it was disabled. This should reduce confusion for new mod users. Setting can still be changed and toggled via shortcut as in previous versions.
  Features:
    - Added support for game version 2.0.
  Bugfixes:
    - Fix incorrect shortcut state when starting new game or when new players join the game.
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2024-06-30
  Bugfixes:
    - Workaround for "Request from buffer chests" option not getting preserved during approvals/unapprovals (vanilla bug/behaviour).
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2024-06-24
  Changes:
    - Construction planner tool highlights and counts affected (unapproved) ghosts instead of placeholder ghosts. Works with both approval and unapproval.
    - Construction planner tool highlights affected ghosts using red outline (similar to what other vanilla planners do) instead of green.
    - Base game version requirement bumped to 1.1.86.
  Bugfixes:
    - Fixed entity duplication when blueprinting unapproved ghosts (due to changes introduced in Factorio 1.1.86).
---------------------------------------------------------------------------------------------------